CAMBIOS DE NAVBAR A FLYOUT Y PERSONALIZACION

--- a/App.xaml
+++ b/App.xaml
@@ -1,8 +1,9 @@
 ﻿<?xml version = "1.0" encoding = "UTF-8" ?>
 <Application xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             xmlns:local="clr-namespace:Montalvo_AppApuntes"
-             x:Class="Montalvo_AppApuntes.App">
+             xmlns:local="clr-namespace:Montalvo_ExamenP2"
+             x:Class="Montalvo_ExamenP2.App"
+             xmlns:views ="clr-namespace:Montalvo_ExamenP2.Views">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
@@ -11,4 +12,27 @@
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Application.Resources>
+
+    <Application.MainPage>
+        <Shell FlyoutBehavior="Flyout" FlyoutHeaderBehavior="Fixed" FlyoutVerticalScrollMode="Auto">
+            <Shell.FlyoutHeader>
+                <Grid BackgroundColor="Green" Padding="10">
+                    <Label Text="HM_FlyoutNavegation"
+                           TextColor="White"/>
+                </Grid>
+            </Shell.FlyoutHeader>
+            <FlyoutItem Title="Notes" Icon="{OnPlatform 'icon_notes.png', iOS='icon_notes_ios.png', MacCatalyst='icon_notes_ios.png'}">
+                <ShellContent ContentTemplate="{DataTemplate views:AllNotesPage}" Route="MainPage" />
+            </FlyoutItem>
+            <FlyoutItem Title="About" Icon="{OnPlatform 'icon_about.png', iOS='icon_about_ios.png', MacCatalyst='icon_about_ios.png'}">
+                <ShellContent ContentTemplate="{DataTemplate views:AboutPage}" Route="AboutPage" />
+            </FlyoutItem>
+            <Shell.FlyoutFooter>
+                <Grid BackgroundColor="Green" Padding="10">
+                    <Label Text="Examen P2_HaylandMontalvo"
+                           TextColor="White"/>
+                </Grid>
+            </Shell.FlyoutFooter>
+        </Shell>
+    </Application.MainPage>
 </Application>
