--- a/AppShell.xaml
+++ b/AppShell.xaml
@@ -1,23 +1,9 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 <Shell
-    x:Class="Montalvo_AppApuntes.AppShell"
+    x:Class="Montalvo_ExamenP2.AppShell"
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-    xmlns:views ="clr-namespace:Montalvo_AppApuntes.Views"
-    Shell.FlyoutBehavior="Disabled">
-    <TabBar>
-    <ShellContent
-        Title="Notes"
-        ContentTemplate="{DataTemplate views:AllNotesPage}"
-        Route="MainPage" 
-         Icon="{OnPlatform 'icon_notes.png', iOS='icon_notes_ios.png', MacCatalyst='icon_notes_ios.png'}"
-        />
-        
-     <ShellContent
-        Title="About"
-        ContentTemplate="{DataTemplate views:AboutPage}"
-        Route="AboutPage" 
-        Icon="{OnPlatform 'icon_about.png', iOS='icon_about_ios.png', MacCatalyst='icon_about_ios.png'}"
-            />
-    </TabBar>
+    xmlns:views ="clr-namespace:Montalvo_ExamenP2.Views">
+    
 </Shell>
+    
