--- a/Views/AboutPage.xaml
+++ b/Views/AboutPage.xaml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="Montalvo_AppApuntes.Views.AboutPage"
-             xmlns:models="clr-namespace:Montalvo_AppApuntes.Models"
+             x:Class="Montalvo_ExamenP2.Views.AboutPage"
+             xmlns:models="clr-namespace:Montalvo_ExamenP2.Models"
              Title="HM_AboutPage">
     <ContentPage.BindingContext>
         <models:About />
