--- a/Views/Notes.xaml
+++ b/Views/Notes.xaml
@@ -2,7 +2,7 @@
     
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="Montalvo_AppApuntes.Views.Notes">
+             x:Class="Montalvo_ExamenP2.Views.Notes">
 
     <ScrollView>
         <VerticalStackLayout Spacing="10" Margin="5">
