REALIZADO TUTORIAL MVVM para 02 enero

--- a/Views/AboutPage.xaml
+++ b/Views/AboutPage.xaml
@@ -1,13 +1,11 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="Montalvo_ExamenP2.Views.AboutPage"
-             xmlns:models="clr-namespace:Montalvo_ExamenP2.Models"
-             Title="HM_AboutPage">
+             xmlns:viewModels="clr-namespace:Montalvo_AppApuntes.ViewModels"
+             x:Class="Montalvo_AppApuntes.Views.AboutPage">
     <ContentPage.BindingContext>
-        <models:About />
+        <viewModels:AboutViewModel />
     </ContentPage.BindingContext>
-    
     <VerticalStackLayout Spacing="10" Margin="10">
         <HorizontalStackLayout Spacing="10">
             <Image Source="dotnet_bot.png"
@@ -18,6 +16,7 @@
         </HorizontalStackLayout>
 
         <Label Text="{Binding Message}" />
-        <Button Text="Learn more..." Clicked="LearnMore_Clicked" />
+        <Button Text="Learn more..." Command="{Binding ShowMoreInfoCommand}" />
     </VerticalStackLayout>
+
 </ContentPage>
