--- a/App.xaml
+++ b/App.xaml
@@ -1,9 +1,9 @@
 ﻿<?xml version = "1.0" encoding = "UTF-8" ?>
 <Application xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             xmlns:local="clr-namespace:Montalvo_ExamenP2"
-             x:Class="Montalvo_ExamenP2.App"
-             xmlns:views ="clr-namespace:Montalvo_ExamenP2.Views">
+             xmlns:local="clr-namespace:Montalvo_AppApuntes"
+             x:Class="Montalvo_AppApuntes.App"
+             xmlns:views ="clr-namespace:Montalvo_AppApuntes.Views">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
