--- a/AppShell.xaml
+++ b/AppShell.xaml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 <Shell
-    x:Class="Montalvo_ExamenP2.AppShell"
+    x:Class="Montalvo_AppApuntes.AppShell"
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-    xmlns:views ="clr-namespace:Montalvo_ExamenP2.Views">
+    xmlns:views ="clr-namespace:Montalvo_AppApuntes.Views">
     
 </Shell>
     
