--- a/Views/Notes.xaml
+++ b/Views/Notes.xaml
@@ -2,8 +2,12 @@
     
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="Montalvo_ExamenP2.Views.Notes">
-
+             x:Class="Montalvo_AppApuntes.Views.Notes"
+             xmlns:viewModels="clr-namespace:Montalvo_AppApuntes.ViewModels">
+    <ContentPage.BindingContext>
+        <viewModels:NoteViewModel />
+    </ContentPage.BindingContext>
+  
     <ScrollView>
         <VerticalStackLayout Spacing="10" Margin="5">
             <Editor x:Name="TextEditor"
@@ -13,11 +17,11 @@
 
             <Grid ColumnDefinitions="*,*" ColumnSpacing="4">
                 <Button Text="Save"
-                    Clicked="SaveButton_Clicked" />
+                    Command="{Binding SaveCommand}"/>
 
                 <Button Grid.Column="1"
                     Text="Delete"
-                    Clicked="DeleteButton_Clicked" />
+                    Command="{Binding DeleteCommand}" />
             </Grid>
         </VerticalStackLayout>
     </ScrollView>
