--- a/Views/HM_AboutPage.xaml
+++ b/Views/HM_AboutPage.xaml
@@ -2,9 +2,9 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:viewModels="clr-namespace:Montalvo_AppApuntes.ViewModels"
-             x:Class="Montalvo_AppApuntes.Views.AboutPage">
+             x:Class="Montalvo_AppApuntes.Views.HM_AboutPage">
     <ContentPage.BindingContext>
-        <viewModels:AboutViewModel />
+        <viewModels:HM_AboutViewModel />
     </ContentPage.BindingContext>
     <VerticalStackLayout Spacing="10" Margin="10">
         <HorizontalStackLayout Spacing="10">
