--- a/Views/HM_AllNotesPage.xaml
+++ b/Views/HM_AllNotesPage.xaml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="Montalvo_AppApuntes.Views.AllNotesPage"
+             x:Class="Montalvo_AppApuntes.Views.HM_AllNotesPage"
              xmlns:viewModels="clr-namespace:Montalvo_AppApuntes.ViewModels"
              NavigatedTo="ContentPage_NavigatedTo"
             Title="Your Notes">
     
     <ContentPage.BindingContext>
-        <viewModels:NotesViewModel />
+        <viewModels:HM_NotesViewModel />
     </ContentPage.BindingContext>
     
     <!-- Add an item to the toolbar -->
